--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,3 @@
-lawnfasdmfn.a,sdfas aewsfasdf
+AmpedUp is a web application that was created as a final project for Wyncode Academy.
+
+Built on Ruby on Rails, AmpedUp allows music fans to connect through concerts. Carpooling, event scheduling and messaging are the main features of this application. Both the Google Maps and 5gig APIs were used in this project.
